Edit file structure

--- a/public/test.html
+++ b/public/test.html
@@ -43,3 +43,21 @@
 </div>
 <div>"How long is your commute"</div>
 <div>"How many hours do you work?"</div>
+
+      <!-- <div className="help-links">
+                    <a href= https://www.healthline.com/health/sleep/sleep-calculator#importance-of-sleep> </a> -->
+      <!-- forbes.com/sites/theyec/2018/10/26/make-the-most-of-your-commute-with-these-eight-productive-tasks/?sh=1997e78b6f2f -->
+      <!-- https://www.nytimes.com/guides/business/how-to-improve-your-productivity-at-work -->
+      <!-- https://www.lifehack.org/articles/productivity/how-get-more-done-day-7-ideas-that-really-work.html
+              </div> -->
+
+                        <!-- <div>"How long is your commute?"</div>
+                                    <div className="slide-container">
+                                      <input type="range" min="0" max="24" value="1" id="slider" className="slider2" />
+                                      <p>Value: <span id="value"></span></p>
+                                    </div>
+                                  <div>"How many hours do you work?"</div>
+                                    <div className="slide-container">
+                                      <input type="range" min="0" max="24" value="1" id="slider" className="slider2" />
+                                      <p>Value: <span id="value"></span></p>
+                                    </div> -->
