event listener test

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     
     <!-- <div class="main-container"> -->
       <div class="question-container">
+
         <div class="question1">How many hours do you sleep?</div>
         <div class="range">
           <div class="sliderValue">
@@ -29,12 +30,13 @@
             <div class="value left">
               0
             </div>
-            <input class="question" type="range" min="0" max="24" value="8" steps="1">
+            <input id="myRange" class="question" type="range" min="0" max="24" value="8" steps="1">
             <div class="value right">
               24
             </div>
           </div>
-        </div>  
+        </div>
+
         <div class="question2">How many hours do you work?</div>
         <div class="range">
           <div class="sliderValue">
@@ -49,7 +51,8 @@
               24
             </div>
           </div>
-        </div>  
+        </div> 
+         
         <div class="question3">How long is your commute? (hours)</div>
         <div class="range">
           <div class="sliderValue">
@@ -59,7 +62,7 @@
             <div class="value left">
               0
             </div>
-            <input class="question" type="range" min="0" max="24" value="8" steps="1">
+            <input  class="question" type="range" min="0" max="24" value="8" steps="1">
             <div class="value right">
               24
             </div>
